--- a/src/components/features/Article/Article.css
+++ b/src/components/features/Article/Article.css
@@ -1,5 +1,39 @@
-.title{
-  margin-left: auto;
-  margin-right: auto;
-  background: rgb(218, 12, 12);
+.wrapper{
+  width: 1440px;
+  margin: 0;
+  padding: 0;
+   
+}
+.img{
+width: 1440px;
+height: 245px;
+position:absolute
+
+
+
+}
+.content1{
+  text-align: center;
+  width: 1290px;
+  height: 300px;
+    background-color: rgb(213, 36, 36);
+  margin-left: 65px;
+  padding-top: 40px;
+  position: fixed;
+  bottom: 33%;
+  background: #FFFFFF;
+border: 1px solid #EAEAEA;
+box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.05);
+border-radius: 5px;
+
+ 
+
+}
+.btn1{
+  position: fixed;
+bottom: -53%;
+right: 40%;
+}
+.summary{
+  margin-top: 35px;
 }
