--- a/src/components/features/ArticlesList/ArticlesList.scss
+++ b/src/components/features/ArticlesList/ArticlesList.scss
@@ -2,9 +2,8 @@
   &__grid {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    gap: 2.2%;
     margin: 45px;
-    
   }
   &__item {
     box-sizing: border-box;
@@ -17,12 +16,11 @@
     box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.05);
     border-radius: 5px;
     margin-top: 45px;
-   
 
     flex: none;
     order: 2;
     flex-grow: 0;
-      img {
+    img {
       width: 400px;
       height: 217px;
       left: 0px;
@@ -47,7 +45,6 @@
   font-weight: 700 !important;
   color: #000 !important;
   font-family: 'Montserrat';
- 
 }
 
 .arrow {
