--- a/src/components/features/ArticlesList/ArticlesList.scss
+++ b/src/components/features/ArticlesList/ArticlesList.scss
@@ -51,3 +51,12 @@
   height: 10px;
   width: 12px;
 }
+.datatime{
+  display: flex;
+  
+  margin-top: 25px;
+}
+.calendar{
+  margin-right: 10px;
+  margin-left: 15px;
+}
